symps data added

--- a/code/configs/symps_house.conf
+++ b/code/configs/symps_house.conf
@@ -4,20 +4,23 @@ train{
     loss_class = model.loss.MVASLoss
     learning_rate = 1e-4
     batchsize = 4096
-    alpha_milestones = [5, 10, 15, 20, 25]
+    alpha_milestones = [1, 2, 3, 4, 5]
     alpha_factor = 2
-    sched_milestones = [5, 10, 15, 20, 25]
+    sched_milestones = [1, 2, 3, 4, 5]
     sched_factor = 0.5
-    epoch = 1
-    obj_list = [gargoyle]
+    epoch = 10
+    obj_list = [house]
+    downscale = 16  # initial downsample scale
+    downscale_milestones = [2, 4, 8] # upsample the input images by 2 at certain epochs
+    downscale_factor = 2
 }
 plot{
     grid_res = 256
-    bbox_size = 0.7
+    bbox_size = 0.3
     grid_res_last_epoch = 512
 }
 loss{
-    TSC_weight = 0
+    TSC_weight = 1
     eikonal_weight = 0.1
     silhouette_weight = 100
     normalize_normal = 0
@@ -27,10 +30,13 @@ loss{
 
 dataset{
     data_dir = "../data/SymPS"
-    downscale = 16
-    camera_object_ratio = 60
-    exclude_views = []
-    debug_mode = True
+    camera_object_ratio = 3
+    exclude_views = [IMG_0216, IMG_0301, IMG_0306, IMG_0316,
+    IMG_0221, IMG_0261, IMG_0346, IMG_0326, IMG_0311, IMG_0291,
+    IMG_0226, IMG_0256, IMG_0361, IMG_0251, IMG_0321, IMG_0241,
+    IMG_0261, IMG_0271, IMG_0281, IMG_0291,
+    IMG_0331, IMG_0341, IMG_0336]
+    debug_mode = False
 }
 model{
     implicit_network
@@ -42,7 +48,7 @@ model{
         bias = 0.6
         skip_in = [4]
         weight_norm = True
-        multires = 6
+        multires = 10
     }
     ray_tracer
     {
